--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/maltaesousa/sitnlayers#readme",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
